--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,6 @@
 <!-- manifest="manifest.appcache" -->
 <html
 	ng-app="myDashboardApp"
-	ng-controller="MainController"
 	manifest="manifest.appcache">
   <head>
     <meta charset="utf-8">
@@ -21,6 +20,11 @@
     <link rel="stylesheet" href="bower_components/angular-material-weburger/dist/angular-material-weburger.css" />
     <link rel="stylesheet" href="bower_components/am-wb-seen-monitors/dist/am-wb-seen-monitors.css" />
     <link rel="stylesheet" href="bower_components/angular-material-dashboard/dist/angular-material-dashboard.css" />
+    <link rel="stylesheet" href="bower_components/angular-material-dashboard-cms/dist/angular-material-dashboard-cms.css" />
+    <link rel="stylesheet" href="bower_components/angular-material-dashboard-spa/dist/angular-material-dashboard-spa.css" />
+    <link rel="stylesheet" href="bower_components/angular-material-dashboard-bank/dist/angular-material-dashboard-bank.css" />
+    <link rel="stylesheet" href="bower_components/angular-material-dashboard-account/dist/angular-material-dashboard-account.css" />
+    <link rel="stylesheet" href="bower_components/angular-material-dashboard-user/dist/angular-material-dashboard-user.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -52,8 +56,6 @@
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-mocks/angular-mocks.js"></script>
-    <script src="bower_components/ng-appcache/dist/appcache.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
@@ -66,6 +68,7 @@
     <script src="bower_components/moment-jalaali/build/moment-jalaali.js"></script>
     <script src="bower_components/angular-pluf/dist/angular-pluf.js"></script>
     <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
+    <script src="bower_components/ng-appcache/dist/appcache.js"></script>
     <script src="bower_components/angular-aria/angular-aria.js"></script>
     <script src="bower_components/angular-material/angular-material.js"></script>
     <script src="bower_components/lf-ng-md-file-input/dist/lf-ng-md-file-input.js"></script>
@@ -82,17 +85,19 @@
     <script src="bower_components/material-calendar/dist/angular-material-calendar.js"></script>
     <script src="bower_components/am-wb-seen-monitors/dist/am-wb-seen-monitors.js"></script>
     <script src="bower_components/angular-material-dashboard/dist/angular-material-dashboard.js"></script>
+    <script src="bower_components/angular-material-dashboard-cms/dist/angular-material-dashboard-cms.js"></script>
+    <script src="bower_components/angular-material-dashboard-spa/dist/angular-material-dashboard-spa.js"></script>
+    <script src="bower_components/angular-material-dashboard-bank/dist/angular-material-dashboard-bank.js"></script>
+    <script src="bower_components/angular-material-dashboard-account/dist/angular-material-dashboard-account.js"></script>
+    <script src="bower_components/angular-material-dashboard-user/dist/angular-material-dashboard-user.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     
-    <script src="scripts/configs/state.js"></script>
     <script src="scripts/configs/icon.js"></script>
     <script src="scripts/configs/language.js"></script>
-    
-    <script src="scripts/runs/security.js"></script>
     <!-- endbuild -->
 </body>
 </html>
