--- a/app/index.html
+++ b/app/index.html
@@ -4,10 +4,10 @@
 	ng-app="myDashboardApp"
 	manifest="manifest.appcache">
   <head>
-    <meta charset="utf-8">
     <title></title>
+    <meta charset="utf-8">
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
