Fix bug in build

--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="bower_components/angular-material-dashboard-bank/dist/angular-material-dashboard-bank.css" />
     <link rel="stylesheet" href="bower_components/angular-material-dashboard-account/dist/angular-material-dashboard-account.css" />
     <link rel="stylesheet" href="bower_components/angular-material-dashboard-user/dist/angular-material-dashboard-user.css" />
+    <link rel="stylesheet" href="bower_components/angular-material-dashboard-seo/dist/angular-material-dashboard-seo.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -81,6 +82,7 @@
     <script src="bower_components/angular-drag-and-drop-lists/angular-drag-and-drop-lists.js"></script>
     <script src="bower_components/angular-material-expansion-panel/dist/md-expansion-panel.js"></script>
     <script src="bower_components/angular-material-icons/angular-material-icons.min.js"></script>
+    <script src="bower_components/weakmap-polyfill/weakmap-polyfill.js"></script>
     <script src="bower_components/angular-material-weburger/dist/angular-material-weburger.js"></script>
     <script src="bower_components/material-calendar/dist/angular-material-calendar.js"></script>
     <script src="bower_components/am-wb-seen-monitors/dist/am-wb-seen-monitors.js"></script>
@@ -90,6 +92,7 @@
     <script src="bower_components/angular-material-dashboard-bank/dist/angular-material-dashboard-bank.js"></script>
     <script src="bower_components/angular-material-dashboard-account/dist/angular-material-dashboard-account.js"></script>
     <script src="bower_components/angular-material-dashboard-user/dist/angular-material-dashboard-user.js"></script>
+    <script src="bower_components/angular-material-dashboard-seo/dist/angular-material-dashboard-seo.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
