--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="bower_components/angular-material-expansion-panel/dist/md-expansion-panel.css" />
     <link rel="stylesheet" href="bower_components/angular-material-icons/angular-material-icons.css" />
     <link rel="stylesheet" href="bower_components/angular-material-weburger/dist/angular-material-weburger.css" />
+    <link rel="stylesheet" href="bower_components/am-wb-seen/dist/am-wb-seen.css" />
     <link rel="stylesheet" href="bower_components/am-wb-seen-monitors/dist/am-wb-seen-monitors.css" />
     <link rel="stylesheet" href="bower_components/angular-material-dashboard/dist/angular-material-dashboard.css" />
     <link rel="stylesheet" href="bower_components/angular-material-dashboard-cms/dist/angular-material-dashboard-cms.css" />
@@ -85,6 +86,8 @@
     <script src="bower_components/angular-material-icons/angular-material-icons.min.js"></script>
     <script src="bower_components/weakmap-polyfill/weakmap-polyfill.js"></script>
     <script src="bower_components/angular-material-weburger/dist/angular-material-weburger.js"></script>
+    <script src="bower_components/angular-uuid/uuid.min.js"></script>
+    <script src="bower_components/am-wb-seen/dist/am-wb-seen.js"></script>
     <script src="bower_components/material-calendar/dist/angular-material-calendar.js"></script>
     <script src="bower_components/am-wb-seen-monitors/dist/am-wb-seen-monitors.js"></script>
     <script src="bower_components/angular-material-dashboard/dist/angular-material-dashboard.js"></script>
