Adding preload css.

--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,7 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/preloader.css">
     <!-- endbuild -->
   </head>
   <body>
