Adding new font

--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,7 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/preloader.css">
+    <link rel="stylesheet" href="styles/fonts.css">
     <!-- endbuild -->
   </head>
   <body>
