add current user navication

--- a/app/index.html
+++ b/app/index.html
@@ -108,6 +108,8 @@
     
     <script src="scripts/configs/icon.js"></script>
     <script src="scripts/configs/language.js"></script>
+    
+    <script src="scripts/runs/navigator.js"></script>
     <!-- endbuild -->
 </body>
 </html>
