Bug fixed: check dist of the project.

--- a/app/index.html
+++ b/app/index.html
@@ -34,9 +34,9 @@
     
     <!-- build:css(.tmp) styles/main.css -->
 	<!-- injector:css -->
-	<link rel="stylesheet" href="/app/styles/fonts.css">
-	<link rel="stylesheet" href="/app/styles/main.css">
-	<link rel="stylesheet" href="/app/styles/preloader.css">
+	<link rel="stylesheet" href="styles/fonts.css">
+	<link rel="stylesheet" href="styles/main.css">
+	<link rel="stylesheet" href="styles/preloader.css">
 	<!-- endinjector -->
     <!-- endbuild -->
   </head>
@@ -109,10 +109,10 @@
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
 	<!-- injector:js -->
-	<script src="/app/scripts/app.js"></script>
-	<script src="/app/scripts/configs/icon.js"></script>
-	<script src="/app/scripts/configs/language.js"></script>
-	<script src="/app/scripts/runs/navigator.js"></script>
+	<script src="scripts/app.js"></script>
+	<script src="scripts/configs/icon.js"></script>
+	<script src="scripts/configs/language.js"></script>
+	<script src="scripts/runs/navigator.js"></script>
 	<!-- endinjector -->
     <!-- endbuild -->
 </body>
