--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,8 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="fragment" content="!">
+    <!--  Tells to crawler that do not index this page and do not follow its links -->
+    <meta name="robots" content="noindex, nofollow" />
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     
     <!-- build:css(.) styles/vendor.css -->
