Run new instance

--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,8 @@
     <link rel="stylesheet" href="bower_components/handsontable/dist/handsontable.css" />
     <link rel="stylesheet" href="bower_components/angular-material-weburger/dist/angular-material-weburger.css" />
     <link rel="stylesheet" href="bower_components/am-wb-seen-core/dist/am-wb-seen-core.css" />
+    <link rel="stylesheet" href="bower_components/angular-xeditable/dist/css/xeditable.css" />
+    <link rel="stylesheet" href="bower_components/am-wb-common/dist/angular-material-weburger-common.css" />
     <link rel="stylesheet" href="bower_components/angular-material-dashboard/dist/angular-material-dashboard.css" />
     <link rel="stylesheet" href="bower_components/angular-material-dashboard-cms/dist/angular-material-dashboard-cms.css" />
     <link rel="stylesheet" href="bower_components/angular-material-dashboard-spa/dist/angular-material-dashboard-spa.css" />
@@ -101,6 +103,8 @@
     <script src="bower_components/angular-material-weburger/dist/angular-material-weburger.js"></script>
     <script src="bower_components/angular-uuid/uuid.min.js"></script>
     <script src="bower_components/am-wb-seen-core/dist/am-wb-seen-core.js"></script>
+    <script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script>
+    <script src="bower_components/am-wb-common/dist/angular-material-weburger-common.js"></script>
     <script src="bower_components/angular-recaptcha/release/angular-recaptcha.js"></script>
     <script src="bower_components/angular-material-dashboard/dist/angular-material-dashboard.js"></script>
     <script src="bower_components/angular-material-dashboard-cms/dist/angular-material-dashboard-cms.js"></script>
