translate some texts.

--- a/app/index.html
+++ b/app/index.html
@@ -82,6 +82,7 @@
     <script src="bower_components/moment/moment.js"></script>
     <script src="bower_components/moment-jalaali/build/moment-jalaali.js"></script>
     <script src="bower_components/angular-pluf/dist/angular-pluf.js"></script>
+    <script src="bower_components/seen-core/dist/seen-core.js"></script>
     <script src="bower_components/seen-tenant/dist/seen-tenant.js"></script>
     <script src="bower_components/angular-aria/angular-aria.js"></script>
     <script src="bower_components/angular-material/angular-material.js"></script>
@@ -110,6 +111,9 @@
     <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
     <script src="bower_components/ng-appcache/dist/appcache.js"></script>
     <script src="bower_components/angular-recaptcha/release/angular-recaptcha.js"></script>
+    <script src="bower_components/blob-polyfill/Blob.js"></script>
+    <script src="bower_components/file-saver.js/FileSaver.js"></script>
+    <script src="bower_components/angular-file-saver/dist/angular-file-saver.bundle.js"></script>
     <script src="bower_components/angular-material-dashboard/dist/angular-material-dashboard.js"></script>
     <script src="bower_components/angular-material-dashboard-tenant/dist/angular-material-dashboard-tenant.js"></script>
     <script src="bower_components/angular-material-dashboard-cms/dist/angular-material-dashboard-cms.js"></script>
