--- a/app/index.html
+++ b/app/index.html
@@ -82,6 +82,7 @@
     <script src="bower_components/moment/moment.js"></script>
     <script src="bower_components/moment-jalaali/build/moment-jalaali.js"></script>
     <script src="bower_components/angular-pluf/dist/angular-pluf.js"></script>
+    <script src="bower_components/seen-core/dist/seen-core.js"></script>
     <script src="bower_components/seen-tenant/dist/seen-tenant.js"></script>
     <script src="bower_components/angular-aria/angular-aria.js"></script>
     <script src="bower_components/angular-material/angular-material.js"></script>
