translate some sentences

--- a/app/index.html
+++ b/app/index.html
@@ -114,6 +114,7 @@
     <script src="bower_components/blob-polyfill/Blob.js"></script>
     <script src="bower_components/file-saver.js/FileSaver.js"></script>
     <script src="bower_components/angular-file-saver/dist/angular-file-saver.bundle.js"></script>
+    <script src="bower_components/angular-material-persian-datepicker/dist/datePicker.min.js"></script>
     <script src="bower_components/angular-material-dashboard/dist/angular-material-dashboard.js"></script>
     <script src="bower_components/angular-material-dashboard-tenant/dist/angular-material-dashboard-tenant.js"></script>
     <script src="bower_components/angular-material-dashboard-cms/dist/angular-material-dashboard-cms.js"></script>
