--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
     <meta name="robots" content="noindex, nofollow" />
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     
-	<!--  injector:base -->
+	<!--  injector:base-tag -->
 	<base href="/" >
 	<!--  endinjector  -->
 	
