# WARNING: head commit changed in the meantime
Merge branch 'release/1.2.0'

# Please enter a commit message to explain why this merge is necessary,
# especially if it merges an updated upstream into a topic branch.
#
# Lines starting with '#' will be ignored, and an empty message aborts
# the commit.

--- a/app/index.html
+++ b/app/index.html
@@ -93,6 +93,8 @@
     <script src="bower_components/moment/moment.js"></script>
     <script src="bower_components/moment-jalaali/build/moment-jalaali.js"></script>
     <script src="bower_components/angular-pluf/dist/angular-pluf.js"></script>
+    <script src="bower_components/mustache.js/mustache.js"></script>
+    <script src="bower_components/lodash/lodash.js"></script>
     <script src="bower_components/seen-core/dist/seen-core.js"></script>
     <script src="bower_components/seen-tenant/dist/seen-tenant.js"></script>
     <script src="bower_components/angular-aria/angular-aria.js"></script>
@@ -127,7 +129,6 @@
     <script src="bower_components/file-saver.js/FileSaver.js"></script>
     <script src="bower_components/angular-file-saver/dist/angular-file-saver.bundle.js"></script>
     <script src="bower_components/angular-material-persian-datepicker/dist/datePicker.min.js"></script>
-    <script src="bower_components/lodash/lodash.js"></script>
     <script src="bower_components/machina/lib/machina.js"></script>
     <script src="bower_components/mblowfish-core/dist/mblowfish-core.js"></script>
     <script src="bower_components/angular-material-dashboard/dist/angular-material-dashboard.js"></script>
