update version to 1.3.1

--- a/app/index.html
+++ b/app/index.html
@@ -115,6 +115,7 @@
     <script src="bower_components/ngHandsontable/dist/ngHandsontable.js"></script>
     <script src="bower_components/am-wb-core/dist/am-wb-core.js"></script>
     <script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script>
+    <script src="bower_components/angular-youtube-mb/src/angular-youtube-embed.js"></script>
     <script src="bower_components/am-wb-common/dist/am-wb-common.js"></script>
     <script src="bower_components/lf-ng-md-file-input/dist/lf-ng-md-file-input.js"></script>
     <script src="bower_components/angular-uuid/uuid.min.js"></script>
