New build of the group

--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="bower_components/angular-material-icons/angular-material-icons.css" />
     <link rel="stylesheet" href="bower_components/pikaday/css/pikaday.css" />
     <link rel="stylesheet" href="bower_components/handsontable/dist/handsontable.css" />
+    <link rel="stylesheet" href="bower_components/jspanel4/dist/jspanel.css" />
     <link rel="stylesheet" href="bower_components/am-wb-core/dist/am-wb-core.css" />
     <link rel="stylesheet" href="bower_components/angular-xeditable/dist/css/xeditable.css" />
     <link rel="stylesheet" href="bower_components/am-wb-common/dist/am-wb-common.css" />
@@ -91,11 +92,13 @@
     <script src="bower_components/angular-nvd3/dist/angular-nvd3.js"></script>
     <script src="bower_components/moment/moment.js"></script>
     <script src="bower_components/moment-jalaali/build/moment-jalaali.js"></script>
-    <script src="bower_components/angular-pluf/dist/angular-pluf.js"></script>
     <script src="bower_components/mustache.js/mustache.js"></script>
     <script src="bower_components/lodash/lodash.js"></script>
     <script src="bower_components/seen-core/dist/seen-core.js"></script>
+    <script src="bower_components/seen-user/dist/seen-user.js"></script>
+    <script src="bower_components/seen-bank/dist/seen-bank.js"></script>
     <script src="bower_components/seen-tenant/dist/seen-tenant.js"></script>
+    <script src="bower_components/seen-cms/dist/seen-cms.js"></script>
     <script src="bower_components/angular-aria/angular-aria.js"></script>
     <script src="bower_components/angular-material/angular-material.js"></script>
     <script src="bower_components/angular-translate/angular-translate.js"></script>
@@ -103,7 +106,6 @@
     <script src="bower_components/md-color-picker/dist/mdColorPicker.min.js"></script>
     <script src="bower_components/tinymce/tinymce.js"></script>
     <script src="bower_components/angular-ui-tinymce/src/tinymce.js"></script>
-    <script src="bower_components/angular-drag-and-drop-lists/angular-drag-and-drop-lists.js"></script>
     <script src="bower_components/angular-material-expansion-panel/dist/md-expansion-panel.js"></script>
     <script src="bower_components/angular-material-icons/angular-material-icons.min.js"></script>
     <script src="bower_components/weakmap-polyfill/weakmap-polyfill.js"></script>
@@ -112,6 +114,8 @@
     <script src="bower_components/zeroclipboard/dist/ZeroClipboard.js"></script>
     <script src="bower_components/handsontable/dist/handsontable.js"></script>
     <script src="bower_components/ngHandsontable/dist/ngHandsontable.js"></script>
+    <script src="bower_components/angular-drag-and-drop-lists/angular-drag-and-drop-lists.js"></script>
+    <script src="bower_components/jspanel4/dist/jspanel.js"></script>
     <script src="bower_components/am-wb-core/dist/am-wb-core.js"></script>
     <script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script>
     <script src="bower_components/angular-youtube-mb/src/angular-youtube-embed.js"></script>
