https://taskulu.com/a/project/5b2501d456ad66341e08ec40/tasks/5bc1956d56ad6618d74d84db

--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="bower_components/pikaday/css/pikaday.css" />
     <link rel="stylesheet" href="bower_components/handsontable/dist/handsontable.css" />
     <link rel="stylesheet" href="bower_components/angular-material-expansion-panel/dist/md-expansion-panel.css" />
-    <link rel="stylesheet" href="bower_components/md-color-picker/dist/mdColorPicker.min.css" />
+    <link rel="stylesheet" href="bower_components/md-color-picker/dist/md-color-picker.css" />
     <link rel="stylesheet" href="bower_components/jspanel4x/dist/jspanel.css" />
     <link rel="stylesheet" href="bower_components/am-wb-core/dist/am-wb-core.css" />
     <link rel="stylesheet" href="bower_components/lf-ng-md-file-input/dist/lf-ng-md-file-input.css" />
@@ -116,7 +116,7 @@
     <script src="bower_components/ngHandsontable/dist/ngHandsontable.js"></script>
     <script src="bower_components/angular-material-expansion-panel/dist/md-expansion-panel.js"></script>
     <script src="bower_components/tinycolor/tinycolor.js"></script>
-    <script src="bower_components/md-color-picker/dist/mdColorPicker.min.js"></script>
+    <script src="bower_components/md-color-picker/dist/md-color-picker.js"></script>
     <script src="bower_components/angular-drag-and-drop-lists/angular-drag-and-drop-lists.js"></script>
     <script src="bower_components/jspanel4x/dist/jspanel.js"></script>
     <script src="bower_components/am-wb-core/dist/am-wb-core.js"></script>
