--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="bower_components/pikaday/css/pikaday.css" />
     <link rel="stylesheet" href="bower_components/handsontable/dist/handsontable.css" />
     <link rel="stylesheet" href="bower_components/angular-material-expansion-panel/dist/md-expansion-panel.css" />
-    <link rel="stylesheet" href="bower_components/md-color-picker/dist/md-color-picker.css" />
+    <link rel="stylesheet" href="bower_components/md-color-picker/dist/mdColorPicker.min.css" />
     <link rel="stylesheet" href="bower_components/jspanel4x/dist/jspanel.css" />
     <link rel="stylesheet" href="bower_components/am-wb-core/dist/am-wb-core.css" />
     <link rel="stylesheet" href="bower_components/lf-ng-md-file-input/dist/lf-ng-md-file-input.css" />
@@ -105,8 +105,6 @@
     <script src="bower_components/angular-aria/angular-aria.js"></script>
     <script src="bower_components/angular-material/angular-material.js"></script>
     <script src="bower_components/angular-translate/angular-translate.js"></script>
-    <script src="bower_components/tinymce/tinymce.js"></script>
-    <script src="bower_components/angular-ui-tinymce/src/tinymce.js"></script>
     <script src="bower_components/angular-material-icons/angular-material-icons.min.js"></script>
     <script src="bower_components/weakmap-polyfill/weakmap-polyfill.js"></script>
     <script src="bower_components/numbro/numbro.js"></script>
@@ -116,9 +114,10 @@
     <script src="bower_components/ngHandsontable/dist/ngHandsontable.js"></script>
     <script src="bower_components/angular-material-expansion-panel/dist/md-expansion-panel.js"></script>
     <script src="bower_components/tinycolor/tinycolor.js"></script>
-    <script src="bower_components/md-color-picker/dist/md-color-picker.js"></script>
+    <script src="bower_components/md-color-picker/dist/mdColorPicker.min.js"></script>
     <script src="bower_components/angular-drag-and-drop-lists/angular-drag-and-drop-lists.js"></script>
     <script src="bower_components/jspanel4x/dist/jspanel.js"></script>
+    <script src="bower_components/tinymce/tinymce.js"></script>
     <script src="bower_components/am-wb-core/dist/am-wb-core.js"></script>
     <script src="bower_components/lf-ng-md-file-input/dist/lf-ng-md-file-input.js"></script>
     <script src="bower_components/angular-uuid/uuid.min.js"></script>
