https://taskulu.com/a/project/5b2501d456ad66341e08ec40/tasks/5bc1abb656ad661f264da162

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 	ng-app="myDashboardApp"
 	manifest="<!-- injector:base-path --><!-- endinjector -->manifest.appcache">
   <head>
-    <title></title>
+    <title>{{app.config.title || 'Dashboard'}}</title>
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
