--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 	ng-app="myDashboardApp"
 	manifest="<!-- injector:base-path --><!-- endinjector -->manifest.appcache">
   <head>
-    <title>{{app.config.title}}</title>
+    <title>{{app.config.title || 'Webpich Dashboard'}}</title>
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
