New build of the gourp

--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="bower_components/pikaday/css/pikaday.css" />
     <link rel="stylesheet" href="bower_components/handsontable/dist/handsontable.css" />
     <link rel="stylesheet" href="bower_components/angular-material-expansion-panel/dist/md-expansion-panel.css" />
-    <link rel="stylesheet" href="bower_components/md-color-picker/dist/md-color-picker.css" />
+    <link rel="stylesheet" href="bower_components/md-color-picker/dist/mdColorPicker.min.css" />
     <link rel="stylesheet" href="bower_components/jspanel4x/dist/jspanel.css" />
     <link rel="stylesheet" href="bower_components/am-wb-core/dist/am-wb-core.css" />
     <link rel="stylesheet" href="bower_components/lf-ng-md-file-input/dist/lf-ng-md-file-input.css" />
@@ -96,19 +96,17 @@
     <script src="bower_components/lodash/lodash.js"></script>
     <script src="bower_components/seen-core/dist/seen-core.js"></script>
     <script src="bower_components/seen-user/dist/seen-user.js"></script>
-    <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
-    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-    <script src="bower_components/angular-messages/angular-messages.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/seen-bank/dist/seen-bank.js"></script>
     <script src="bower_components/seen-tenant/dist/seen-tenant.js"></script>
     <script src="bower_components/seen-cms/dist/seen-cms.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-aria/angular-aria.js"></script>
+    <script src="bower_components/angular-messages/angular-messages.js"></script>
+    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-material/angular-material.js"></script>
     <script src="bower_components/angular-translate/angular-translate.js"></script>
-    <script src="bower_components/tinymce/tinymce.js"></script>
-    <script src="bower_components/angular-ui-tinymce/src/tinymce.js"></script>
     <script src="bower_components/angular-material-icons/angular-material-icons.min.js"></script>
     <script src="bower_components/weakmap-polyfill/weakmap-polyfill.js"></script>
     <script src="bower_components/numbro/numbro.js"></script>
@@ -118,9 +116,10 @@
     <script src="bower_components/ngHandsontable/dist/ngHandsontable.js"></script>
     <script src="bower_components/angular-material-expansion-panel/dist/md-expansion-panel.js"></script>
     <script src="bower_components/tinycolor/tinycolor.js"></script>
-    <script src="bower_components/md-color-picker/dist/md-color-picker.js"></script>
+    <script src="bower_components/md-color-picker/dist/mdColorPicker.min.js"></script>
     <script src="bower_components/angular-drag-and-drop-lists/angular-drag-and-drop-lists.js"></script>
     <script src="bower_components/jspanel4x/dist/jspanel.js"></script>
+    <script src="bower_components/tinymce/tinymce.js"></script>
     <script src="bower_components/am-wb-core/dist/am-wb-core.js"></script>
     <script src="bower_components/lf-ng-md-file-input/dist/lf-ng-md-file-input.js"></script>
     <script src="bower_components/angular-uuid/uuid.min.js"></script>
@@ -148,6 +147,7 @@
     <script src="bower_components/angular-material-dashboard-bank/dist/angular-material-dashboard-bank.js"></script>
     <script src="bower_components/angular-material-dashboard-account/dist/angular-material-dashboard-account.js"></script>
     <script src="bower_components/angular-material-dashboard-user/dist/angular-material-dashboard-user.js"></script>
+    <script src="bower_components/seen-seo/dist/seen-seo.js"></script>
     <script src="bower_components/angular-material-dashboard-seo/dist/angular-material-dashboard-seo.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
