--- a/app/index.html
+++ b/app/index.html
@@ -41,6 +41,9 @@
     <link rel="stylesheet" href="bower_components/angular-material-dashboard-account/dist/angular-material-dashboard-account.css" />
     <link rel="stylesheet" href="bower_components/angular-material-dashboard-user/dist/angular-material-dashboard-user.css" />
     <link rel="stylesheet" href="bower_components/angular-material-dashboard-seo/dist/angular-material-dashboard-seo.css" />
+    <link rel="stylesheet" href="bower_components/angular-xeditable/dist/css/xeditable.css" />
+    <link rel="stylesheet" href="bower_components/am-wb-common/dist/am-wb-common.css" />
+    <link rel="stylesheet" href="bower_components/angular-material-dashboard-shop/dist/angular-material-dashboard-shop.css" />
     <!-- endbower -->
     <!-- endbuild -->
     
@@ -96,15 +99,15 @@
     <script src="bower_components/lodash/lodash.js"></script>
     <script src="bower_components/seen-core/dist/seen-core.js"></script>
     <script src="bower_components/seen-user/dist/seen-user.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
+    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="bower_components/angular-messages/angular-messages.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/seen-bank/dist/seen-bank.js"></script>
     <script src="bower_components/seen-tenant/dist/seen-tenant.js"></script>
     <script src="bower_components/seen-cms/dist/seen-cms.js"></script>
-    <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-aria/angular-aria.js"></script>
-    <script src="bower_components/angular-messages/angular-messages.js"></script>
-    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-material/angular-material.js"></script>
     <script src="bower_components/angular-translate/angular-translate.js"></script>
     <script src="bower_components/angular-material-icons/angular-material-icons.min.js"></script>
@@ -149,6 +152,11 @@
     <script src="bower_components/angular-material-dashboard-user/dist/angular-material-dashboard-user.js"></script>
     <script src="bower_components/seen-seo/dist/seen-seo.js"></script>
     <script src="bower_components/angular-material-dashboard-seo/dist/angular-material-dashboard-seo.js"></script>
+    <script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script>
+    <script src="bower_components/angular-youtube-mb/src/angular-youtube-embed.js"></script>
+    <script src="bower_components/am-wb-common/dist/am-wb-common.js"></script>
+    <script src="bower_components/seen-shop/dist/seen-shop.js"></script>
+    <script src="bower_components/angular-material-dashboard-shop/dist/angular-material-dashboard-shop.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -156,7 +164,6 @@
     <!-- injector:js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/configs/icon.js"></script>
-    <script src="scripts/configs/language.js"></script>
     <script src="scripts/runs/navigator.js"></script>
     <!-- endinjector -->
     <!-- endbuild -->
